6.1 upgrades