@@ -32,6 +32,7 @@ import java.util.List;
 
 import org.pentaho.di.core.Const;
 import org.pentaho.di.core.RowMetaAndData;
+import org.pentaho.di.core.SQLStatement;
 import org.pentaho.di.core.database.Database;
 import org.pentaho.di.core.database.DatabaseMeta;
 import org.pentaho.di.core.exception.KettleDatabaseException;
@@ -211,7 +212,7 @@ public class DimensionLookup extends BaseStep implements StepInterface {
 
       determineTechKeyCreation();
 
-      data.notFoundTk = new Long( meta.getDatabaseMeta().getNotFoundTK( isAutoIncrement() ) );
+      data.notFoundTk = Long.valueOf( meta.getDatabaseMeta().getNotFoundTK( isAutoIncrement() ) );
       // if (meta.getKeyRename()!=null && meta.getKeyRename().length()>0) data.notFoundTk.setName(meta.getKeyRename());
 
       if ( getCopy() == 0 ) {
@@ -506,7 +507,7 @@ public class DimensionLookup extends BaseStep implements StepInterface {
         }
 
         valueDateTo = data.max_date;
-        valueVersion = new Long( 1L ); // Versions always start at 1.
+        valueVersion = Long.valueOf( 1L ); // Versions always start at 1.
 
         // get a new value from the sequence generator chosen.
         //
@@ -1729,6 +1730,21 @@ public class DimensionLookup extends BaseStep implements StepInterface {
           logDetailed( BaseMessages.getString( PKG, "DimensionLookup.Log.ConnectedToDB" ) );
         }
         data.db.setCommit( meta.getCommitSize() );
+
+        // SKOFRA artf48614 : Auto create tables when running job
+        String schemaTable = data.db.getDatabaseMeta().getQuotedSchemaTableCombination(meta.getSchemaName(), meta.getTableName());
+        String autoCreateTables = getVariable("BI_AUTO_CREATE_TABLES", "NO");
+        if (meta.isUpdate() && autoCreateTables.startsWith("Y") && !data.db.checkTableExists(environmentSubstitute(schemaTable))) {
+            RowMetaInterface prev = getTransMeta().getPrevStepFields(getStepMeta().getName());
+            
+            SQLStatement sql =  meta.getSQLStatements(getTransMeta(), getStepMeta() , prev, repository, metaStore); 
+            if (!sql.hasError()) {
+                if (sql.hasSQL()) {
+                    data.db.execStatements(sql.getSQL());
+                }
+            }
+        }
+        // SKOFRA artf48614 : Auto create tables when running job
 
         return true;
       } catch ( KettleException ke ) {
